# sycl-cuda-ai-bench

./: .gitignore  CMakeLists.txt  README.md
docs/: blog_post_draft.md  perf_analysis.md  writeup.md
include/backends/: backend.hpp
include/common/: benchmark.hpp
scripts/: merge_results.py  profile_intel.ps1  profile_nvidia.ps1  run_benchmarks.ps1
src/: benchmark_main.cpp
src/backends/: cpu_backend.cpp  cuda_backend.cu  sycl_backend.cpp
src/common/: benchmark_common.cpp
